[package]
name = "tempest-nature"
version = "0.1.0"
authors = ["Marcelo Santos <rocha.mer21@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
dioxus = { version = "0.5", features = ["desktop", "router"] }
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0.125"
dotenv = "0.15"

# Debug
dioxus-logger = "0.5.1"

[dependencies]
manganis = "0.2.2"
